--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "project30"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
+python-dotenv = "^1.0.1"
+djangorestframework-simplejwt = "^5.4.0"
+djangorestframework = "^3.15.2"
 
 
 [tool.poetry.group.lint.dependencies]
